# pylive-played-clip

./: .gitignore  LICENSE  README.md  Taskfile-private.env.template  Taskfile.yml  setup.cfg  setup.py
docs/: build-info.rst  conf.py  index.rst  requirements.txt
docs/_templates/: layout.html
docs/api/: index.rst  pylive_played_clip_cli.rst
docs/api/classes/: ableton_clip_monitor.rst  ableton_clip_monitor_exception.rst  index.rst
docs/contributor_notes/: index.rst
src/pylive_played_clip/: __init__.py  __main__.py
test/: enable_imports_from_src_folder.py  test_ableton_clip_monitor.py  test_color_utilities.py  test_pylive_played_clip.py
tools/: build_docs.py  get_version.py
