[metadata]
name = pylive-played-clip
version = 1.1.3
url = https://github.com/saselberg/pylive-played-clip
author = Scott Selberg
author_email = saselberg@gmail.com
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A tool to monitor Ableton Live and update the color of clips that have been played.
long_description = file: readme.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/saselberg/pylive-played-clip
    Documentation = https://pylive-played-clip.readthedocs.io/en/latest/
    PyPI Package = https://pypi.org/project/pylive-played-clip/

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pylive

[options.packages.find]
where = src

[options.package_data]
* = *

[options.entry_points]
console_scripts =
    pylive-played-clip = pylive_played_clip.__main__:_main

[options.extras_require]
dev =
    build
    flake8
    linuxdoc
    markupsafe
    mypy
    myst-parser
    pyright
    pytest
    sphinx
    sphinx_rtd_theme
    sphinx-argparse
    sphinx-copybutton
    sphinx-toolbox
    twine
    types-pytest-lazy-fixture
    types-setuptools

[flake8]
max-line-length = 180